refactor: unify .html and .css file names

--- a/MyWallet-Client/src/main/resources/templates/expupdate.html
+++ b/MyWallet-Client/src/main/resources/templates/expupdate.html
@@ -3,7 +3,7 @@
 	<head lang="en">
 	    <meta charset="UTF-8"/>
 	    <title>MyWallet</title>
-	    <link rel="stylesheet" href="css/updatePageStyle.css" />
+	    <link rel="stylesheet" href="css/update.css" />
 	    
 		<script src="/js/setTimeAndDate.js"></script>
 		<script src="/js/startFunctionsUserPage.js"></script>
@@ -34,7 +34,7 @@
 			
 			<div class="griditem2">		
 				  	
-				  	<form action="/userPage">
+				  	<form action="/user">
 	    				<input type="submit" value="User page"/>
 					</form>	
 					<form action="/showExpenditures">
