--- a/MyWallet-Client/src/main/resources/templates/user.html
+++ b/MyWallet-Client/src/main/resources/templates/user.html
@@ -3,7 +3,7 @@
 	<head lang="en">
 	    <meta charset="UTF-8"/>
 	    <title>MyWallet</title>
-	    <link rel="stylesheet" href="css/userPageStyle.css" />
+	    <link rel="stylesheet" href="css/user.css" />
 	    
 		<script src="/js/setTimeAndDate.js"></script>
 		<script src="/js/validateNewUserForm.js"></script>
@@ -73,7 +73,7 @@
 					<input type="email" id="email" name="email" required/><br><br>
 					
 					<font>Roles</font><br>
-					<input type="checkbox" name="isAdmin" th:value=1/>
+					<input type="checkbox" th:value=1 name="isAdmin"/>
 					<font>Admin</font><br>
 						
 					<input type="checkbox" disabled="disabled" checked="checked"/>
