--- a/MyWallet-Client/src/main/resources/templates/login.html
+++ b/MyWallet-Client/src/main/resources/templates/login.html
@@ -2,10 +2,10 @@
 <html xmlns:th="https://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
-		<title>Insert title here</title>
+		<title>MyWallet-Login</title>
 		<link rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-		<link rel="stylesheet" href="css/loginStyle.css">
+		<link rel="stylesheet" href="css/login.css">
 	</head>
 	
 	<body>
@@ -25,6 +25,7 @@
 					<input type="submit" id="login" value="Login">
 				</p>
 			</form>
+			<br>
 			<!--  
 			<div id="create-account-wrap">
 				<p>
